--- a/data/html/menu/mg/index.html
+++ b/data/html/menu/mg/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Menu1</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div class="navigation">
